--- a/node/hexo/themes/landscape/layout/_partial/header.ejs
+++ b/node/hexo/themes/landscape/layout/_partial/header.ejs
@@ -19,10 +19,7 @@
         <% } %>
       </nav>
       <nav id="sub-nav">
-        <% if (theme.rss){ %>
-          <a id="nav-rss-link" class="nav-icon" href="<%- theme.rss %>" title="<%= __('rss_feed') %>"></a>
-        <% } %>
-        <a id="nav-search-btn" class="nav-icon" title="<%= __('search') %>"></a>
+        <a id="nav-github" class="nav-icon" title="github" target="_blank" href="https://github.com/daixinye"></a>
       </nav>
       <div id="search-form-wrap">
         <%- search_form({button: '&#xF002;'}) %>
